--- a/ann-from-scratch.ipynb
+++ b/ann-from-scratch.ipynb
@@ -36,7 +36,7 @@
     "    return 1 / (1 + np.exp(-s))\n",
     "\n",
     "\n",
-    "def sig_inv(s):\n",
+    "def sig_grad(s):\n",
     "    \"\"\"Sigmoid derivative function.\"\"\"\n",
     "    return sig(s) * (1 - sig(s))\n",
     "\n",
@@ -68,14 +68,14 @@
     "        d_w1 = np.dot(\n",
     "            self.x.T,\n",
     "            np.dot(\n",
-    "                (self.z2 - self.y) * sig_inv(self.s2),\n",
+    "                (self.z2 - self.y) * sig_grad(self.s2),\n",
     "                self.w2.T\n",
-    "            ) * sig_inv(self.s1)\n",
+    "            ) * sig_grad(self.s1)\n",
     "        )\n",
     "\n",
     "        d_w2 = np.dot(\n",
     "            self.z1.T,\n",
-    "            (self.z2 - self.y) * sig_inv(self.s2)\n",
+    "            (self.z2 - self.y) * sig_grad(self.s2)\n",
     "        )\n",
     "\n",
     "        self.w1 -= self.alpha * d_w1\n",
